# gluxe

./: .gitignore  .oxfmtrc.json  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/build-support/: Cargo.toml
crates/build-support/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: assets.rs  bridge.rs  coerce.rs  component.rs  config.rs  dev.rs  jobs.rs  lib.rs  lifecycle.rs  macro_support.rs  model.rs  plugin.rs  render.rs  scroll.rs  scrollbar.rs  stack.rs  state.rs  text_input.rs
crates/core/src/anim/: easing.rs  fields.rs  mod.rs
crates/core/src/render/: anchor.rs  mod.rs
crates/core/src/state/: invoke.rs  mod.rs
crates/core/src/style/: apply.rs  color.rs  fields.rs  font_family.rs  grid.rs  length.rs  mod.rs  parse.rs  reader.rs
crates/core/src/text_input/: edit.rs  geometry.rs  mod.rs
crates/core/tests/fixtures/: style_prop_samples.json
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
examples/counter/: App.tsx  Cargo.toml  app.json  package.json  tsconfig.json
examples/counter/src/: main.rs
examples/file-explorer/: App.tsx  Cargo.toml  README.md  app.json  index.tsx  package.json  vite.config.ts
examples/file-explorer/src/: main.rs
examples/othello/: Cargo.toml  app.json  build.rs  index.tsx  package.json  tsconfig.json  vite.config.ts
examples/othello/src/: ai.rs  board.rs  main.rs  othello.ts  plugin.rs  theme.ts
examples/othello/src/components/: BoardView.tsx  Button.tsx  Disc.tsx  GameOver.tsx  Menu.tsx  ScorePanel.tsx  TitleBar.tsx  Toast.tsx
examples/othello/src/hooks/: useAnimationFrame.ts
examples/othello/src/routes/: _layout.tsx  game.tsx  index.tsx
examples/ui-showcase/: App.tsx  Cargo.toml  app.json  index.tsx  package.json  vite.config.ts
examples/ui-showcase/components/: theme.ts  ui-kit.tsx
examples/ui-showcase/components/sections/: accordion-section.tsx  button-section.tsx  checkbox-section.tsx  dialog-section.tsx  disclosure-section.tsx  radio-group-section.tsx  scroll-area-section.tsx  select-section.tsx  switch-section.tsx  tabs-section.tsx  toggle-section.tsx
examples/ui-showcase/src/: main.rs
plugins/fs/: Cargo.toml  README.md  oxlint.config.ts  package.json  tsconfig.json  tsdown.config.ts
plugins/fs/js/: fs.ts  index.ts
plugins/fs/src/: lib.rs
