[package]
name = "gluxe-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "build.rs helper for gluxe app projects: manifest checks, window-icon embedding, and stack-size headroom."
keywords = ["gluxe", "build", "desktop", "react", "ui"]
categories = ["development-tools::build-utils"]

[dependencies]
serde_json = "1"
embed-resource = "3"

[lints]
workspace = true
