[package]
name = "othello-example"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "othello-example"
path = "src/main.rs"

[dependencies]
gluxe = { path = "../../crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
gluxe-build = { path = "../../crates/build-support" }
